--- a/index.html
+++ b/index.html
@@ -60,12 +60,25 @@
         <center> 
             <h1>Joaquín Christlieb Wiener</h1>
         </center>
-        <p>Hola, soy Joaquín Christlieb. Actualmente estoy cursando el primer semestre de la licenciatura en Matemáticas Aplicadas en la Universidad Nacional de México (UNAM). Planeo cambiarme a la carrera de Matemáticas el próximo año para el tercer semestre en 2026-1.</p>
+        <p>Hola, soy Joaquín Christlieb. Actualmente estoy cursando el primer semestre de la licenciatura en Matemáticas Aplicadas en la 
+            Universidad Nacional de México (UNAM). Planeo cambiarme a la carrera de Matemáticas el próximo año para el tercer semestre en 2026-1.</p>
         
+        <p>Pienso cambiarme de carrera a Matemáticas. 
+            Eso no ocurrirá sino hasta agosto del 2025, entonces creo que tomaré el curso de Geometría Moderna I el próximo semestre, 
+            sino es que me espero hasta el 2026-1 para tomarlo con mi actual profesor de Cálculo diferencial e integral I</p>
+
         <p>A lo largo de mi carrera he estado (y estaré) transcribiendo algunas de mis notas a PDF para fácil acceso, entre ellas ahora se encuentran:</p>
             <ul>
-                <li><a href="https://drive.google.com/file/d/1k_nFA_PivSVzH2Wps3qT_STe4JaDiLjw/view?usp=drive_link">Teoremario Álgebra Superior I</a></li>
+                <li><a href="https://drive.google.com/file/d/1uZacP-_YdeFRvHogDXdrGZAZ5Kq-qJHX/view?usp=drive_link">Teoremario Álgebra Superior I</a></li>
             </ul>
+            <ul>
+                <li>Estoy aún trabajando en un teoremario de Cálculo diferencial e integral I. Cubrirá los números reales con sus axiomas de cuerpo y de orden y el supremo.
+                    Después el límite de funciones reales de variable real con teoremas, que dan paso a la continuidad con sus respectivos teoremas. Para las demostraciones
+                    de cirtos teoremas es necesario el Axioma del Supremo, que se revisa. Lo último es la derivada; funciones derivables, teoremas, aplicaciones y consecuencias
+                    como los polinomios de Taylor, la regla de L'Hôpital y el Teorema del valor medio generalizado.
+                </li>  
+            </ul>
+        <p>Tomo otras materias, pero no sé si valga la pena hacerles un teoremario. Ya veré.</p>
     </main>
-
+<body>
 </html>
