--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="">
 
 <style>
     body{
@@ -11,6 +11,7 @@
         max-width: 1000px;
         margin: 0 auto;
         background-color: #dcdcdc;
+        text-align: justify-all;
         padding: 20px;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -28,7 +29,14 @@
         text-align: center;
         margin-bottom: 20px;
     }
-    
+
+    sub{
+        color:darkcyan;
+        text-align: right;
+        margin-bottom: 18px;
+        font-size: 125%
+    }
+
     h3{
         margin-left: 50px;
         font-size: 125%;
@@ -39,7 +47,6 @@
         margin-right: 50px;
         margin-bottom: 15px;
         font-size: 125%;
-
     }
 
     a {
@@ -57,11 +64,9 @@
 </head>
 <body>
     <main>
-        <center> 
             <h1>Joaquín Christlieb Wiener</h1>
-        </center>
-        <p>Hola, soy Joaquín Christlieb. Actualmente estoy cursando el primer semestre de la licenciatura en Matemáticas Aplicadas en la 
-            Universidad Nacional de México (UNAM). Planeo cambiarme a la carrera de Matemáticas el próximo año para el tercer semestre en 2026-1.</p>
+        <p>Hola, soy Joaquín Christlieb. Actualmente estoy cursando el segundo semestre de la licenciatura en Matemáticas Aplicadas en la
+            Universidad Nacional de México (UNAM). Planeo cambiarme a la carrera de Matemáticas el próximo semestre para el tercer semestre en 2026-1.</p>
         
         <p>Pienso cambiarme de carrera a Matemáticas. 
             Eso no ocurrirá sino hasta agosto del 2025, entonces creo que tomaré el curso de Geometría Moderna I el próximo semestre, 
@@ -80,5 +85,13 @@
             </ul>
         <p>Tomo otras materias, pero no sé si valga la pena hacerles un teoremario. Ya veré.</p>
     </main>
+</body>
 <body>
+    <main>
+            <sub>Actualización. 2.0 (20.02.25)</sub>
+        <p>Cambió el semestre y ahora tomo nuevas materias. Entre ellas la continuación de Álgebra Superior I. También me vi obligado a tomar
+            sogenannte "Programación", "Ciencia Básica" y elegí "Gráficas y Juegos".</p>
+        <p>New year new me implica que voy a subir aqui o a Github cualesquiera códigos que haga. Prometo que no serán plagios de Chtagpt or anything.</p>
+    </main>
+</body>
 </html>
